AW-5699 Fix z-index of modal-overlays

--- a/src/scss/_modal.scss
+++ b/src/scss/_modal.scss
@@ -11,7 +11,7 @@
   left: $space;
   right: $space;
   top: 50%;
-  z-index: 149;
+  z-index: 99999;
   box-shadow: 0 10px 35px 0 rgba(0,0,0,.2);
   @include transform(translate(0,-60%));
   @include transition(all 300ms ease);
@@ -66,7 +66,6 @@
     color: $mediumGray;
   }
 }
-
 .modal-overlay {
   position: absolute;
   left: 0;
@@ -77,7 +76,7 @@
   pointer-events: none;
 
   background: $beige;
-  z-index: 148;
+  z-index: 99998;
   @include transition(opacity 800ms ease 200ms);
 }
 
